cmake_minimum_required(VERSION 3.2)

project(ttkGenericScriptCmd)

add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(
    ${PROJECT_NAME}
        PUBLIC
            ttkProgramBase
            ttkEventDataConverter
            ttkRoadDataConverter
            ttkRoadRefinement
            ttkArrayEditor
            ttkCinemaWriter
            ttkMapEventToRefinedRoad
            ttkRoadDensity
)

set_target_properties(
    ${PROJECT_NAME}
        PROPERTIES
            INSTALL_RPATH
                "${CMAKE_INSTALL_PREFIX}/lib64/TopologyToolKit;${CMAKE_INSTALL_PREFIX}/lib/ttk"
)

install(
    TARGETS
        ${PROJECT_NAME}
    RUNTIME DESTINATION
        ${TTK_INSTALL_BINARY_DIR}
)
